2016-12-29  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'add_efi_boot'

	many fixes for the ocf:esos:syncro resource agent

2016-12-27  Marc A. Smith  <marc.smith@parodyne.com>

	increased the esos_boot partition size to 400 MiB

2016-12-25  Marc A. Smith  <marc.smith@parodyne.com>

	initial update to support for EFI booting (and still support legacy BIOS booting): added the freetype package for GRUB; use the mkfs binary instead of individual mkfs.xxx commands so we can control the type with a parameter; tweaked the disk label and file system so the first partition (esos_boot) is a FAT32 FS and is type 0xEF (EFI); added a second grub-install line in the image target for adding the EFI stuff; updated the grub target to enable grub-mkfont and configure/build a second time for EFI; tweaked the kernel config for EFI booting; updates to grub.cfg

2016-12-03  Marc A. Smith  <marc.smith@parodyne.com>

	added a call to setlocale() in main() and use NCURSES_NO_UTF8_ACS=1 in the environment, which when combined, fixes the line character issue with PuTTY

2016-12-01  Marc A. Smith  <marc.smith@parodyne.com>

	updated getBlockDevChoice() in the TUI to handle NVMe block devices

2016-11-29  Marc A. Smith  <marc.smith@parodyne.com>

	updated the initramfs init script and Makefile to change the size of the root tmpfs FS based on the '--enable-debug' build option (debug gets 2 GiB, non-debug gets 1.5 GiB)

	updated mdadm to the latest GH master commit; added the nvme-cli package

2016-11-08  Marc A. Smith  <marc.smith@parodyne.com>

	tweaked a couple variable lines in the Makefile; added a sed-patch for ocf:lvm2:VolumeGroup so OCF_ERR_GENERIC is not returned when attempting a probe operation (eg, before clvmd is started)

2016-11-05  Marc A. Smith  <marc.smith@parodyne.com>

	updated the tzdata target to include the "factory" timezone data files; more bug fixes in the ESOS 'scst' and 'alua' resource agents; bug fix in the TUI's dateTimeDialog() function
